--- a/sofia.html
+++ b/sofia.html
@@ -8,18 +8,29 @@
     <title>Sofia Cespedes</title>
 </head>
     <h1>"Auto Biografia"</h1>
-   <img class =yo src="js.png.png" alt="Mi persona" width="100" height="100"> 
+    <div class = "yo">
+        <img src="js.png.png" alt="java script" width="100" height="100"> 
+    </div>
    
-  
         <style>
              p{
-            text-align:center;
-            max-width: 1000px;
+            text-align:left;
+            max-width: 5000px;
             
              }
         </style>
 
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Acerca de</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
+      </header>
 
     <p>
         Hola querido espectador!,  soy Sofia Cespedes Vargas, tengo 19 años 
@@ -27,9 +38,12 @@
         una persona autodidacta, amable, con escucha activa y disposición a la hora de trabajar.
         Estoy interesada en desarrollo de software, bases de datos, desarrollo web y desarrollo 
         de aplicaciones moviles , actualmente estoy estudiando ingles y a su vez estoy aprendiendo
-        distintos lenguajes de programación y algunos asuntos que considero importantes entre esos 
-        los sistemas distribuidos
+        distintos lenguajes de programación y algunos asuntos que considero importantes. Pero bueno, quiero contarte el diferente contenido que podras encontrar en estas paginas web, Inicialmente quiero que me conozcas a mi, mi trabajo, mis gustos y sobre todo mis habilidades a nivel profesional, siempre tengo la disposición de trabajar en equipo con personas o empresas que le saquen provecho a las tecnologias o quieran evolucionar, por otro lado habra una pagina web dedicada a pokemon, el famoso juego que casi todos conocemos, esta pagina web tendra como fin elevar tu imaginación y mediante un formulario planear como te gustaria que fuera tu pokemon ideal, otra de las paginas web sera ambiental, donde podras informarte, y conocer diferentes paginas donde podras apoyar distintos asuntos ambientales que nos benefician a todos, luego, podras encontrar una pagina web de tecnologia, que te informara casos famosos de robos y estafas, el mundo del internet puede ser bastante oscuro, asi como distintas formas de protegerte de aquellas amenazas tecnologicas, y por ultimo encontraras una pagina web donde te contare un poco de mi trabajo para optimizar y dar a conocer empresas pequeñas o grandes en el mundo del internet, nadie pensaria que una pagina web podria generar tanto impacto, pero, podras ver la importancia de evolucionar y sacarle provecho al internet.
     </p>
     
+    <footer>
+        <p>Puedes contactarme al: +57 3116566558</p>
+      </footer>
 </body>
+
 </html>
