Mejore la intro baje el texto y la imagen flotante

--- a/sofia.html
+++ b/sofia.html
@@ -31,16 +31,16 @@
           </ul>
         </nav>
       </header>
-
+      <div class="introduccion">
     <p>
         Hola querido espectador!,  soy Sofia Cespedes Vargas, tengo 19 años 
         soy estudiante de ingenieria de sistemas en la universidad Javeriana, me caracterizo por ser
         una persona autodidacta, amable, con escucha activa y disposición a la hora de trabajar.
         Estoy interesada en desarrollo de software, bases de datos, desarrollo web y desarrollo 
         de aplicaciones moviles , actualmente estoy estudiando ingles y a su vez estoy aprendiendo
-        distintos lenguajes de programación y algunos asuntos que considero importantes. Pero bueno, quiero contarte el diferente contenido que podras encontrar en estas paginas web, Inicialmente quiero que me conozcas a mi, mi trabajo, mis gustos y sobre todo mis habilidades a nivel profesional, siempre tengo la disposición de trabajar en equipo con personas o empresas que le saquen provecho a las tecnologias o quieran evolucionar, por otro lado habra una pagina web dedicada a pokemon, el famoso juego que casi todos conocemos, esta pagina web tendra como fin elevar tu imaginación y mediante un formulario planear como te gustaria que fuera tu pokemon ideal, otra de las paginas web sera ambiental, donde podras informarte, y conocer diferentes paginas donde podras apoyar distintos asuntos ambientales que nos benefician a todos, luego, podras encontrar una pagina web de tecnologia, que te informara casos famosos de robos y estafas, el mundo del internet puede ser bastante oscuro, asi como distintas formas de protegerte de aquellas amenazas tecnologicas, y por ultimo encontraras una pagina web donde te contare un poco de mi trabajo para optimizar y dar a conocer empresas pequeñas o grandes en el mundo del internet, nadie pensaria que una pagina web podria generar tanto impacto, pero, podras ver la importancia de evolucionar y sacarle provecho al internet.
+        distintos lenguajes de programación y algunos asuntos que considero importantes. Pero bueno, quiero contarte el diferente contenido que podras encontrar en estas paginas web. El objetivo principal es que me conozcas a mi, mi trabajo, mis gustos y sobre todo mis habilidades a nivel profesional, siempre tengo la disposición de trabajar en equipo con personas o empresas que le saquen provecho a las tecnologias o quieran evolucionar. Mediante el menu podras navegar en 5 paginas web, el menu principal (bienvenida), segundo mis datos biograficos, tercero mi hoja vida y por ultimo material de interes (gustos y pasatiempos).espero, ser de tu agrado. por otro lado te invito a seguirme en mi github, donde estare programando y dando a conocer distintas paginas web, por ahora, te dare un breve spoiler de lo que podras encontrar en las proximas paginas que estare desarrollando. Inicialmente habra una pagina web dedicada a pokemon, el famoso juego que casi todos conocemos, esta pagina web tendra como fin elevar tu imaginación y mediante un formulario planear como te gustaria que fuera tu pokemon ideal, otra de las paginas web sera ambiental, donde podras informarte, y conocer diferentes paginas en las cuales podras apoyar distintos asuntos ambientales que nos benefician a todos, luego, podras encontrar una pagina web de tecnologia, que te informara casos famosos de robos y estafas, el mundo del internet puede ser bastante oscuro, asi como distintas formas de protegerte de aquellas amenazas tecnologicas, y por ultimo encontraras una pagina web donde te contare un poco de mi trabajo para optimizar y dar a conocer empresas pequeñas o grandes en el mundo del internet, nadie pensaria que una pagina web podria generar tanto impacto, pero, podras ver la importancia de evolucionar y sacarle provecho a las paginas web.
     </p>
-    
+    </div>
     <footer>
         <p>Puedes contactarme al: +57 3116566558</p>
       </footer>
