coloque la barra de menu superior

--- a/sofia.html
+++ b/sofia.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sofia Cespedes</title>
 </head>
-    <h1>"Auto Biografia"</h1>
     <div class = "yo">
         <img src="js.png.png" alt="java script" width="100" height="100"> 
     </div>
@@ -24,14 +23,15 @@
     <header>
         <nav>
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Bienvenido</a></li>
+            <li><a href="#">Datos Biograficos</a></li>
+            <li><a href="#">Hoja de vida</a></li>
+            <li><a href="#">Hobbies</a></li>
           </ul>
         </nav>
       </header>
       <div class="introduccion">
+        <h1>"Auto Biografia"</h1>
     <p>
         Hola querido espectador!,  soy Sofia Cespedes Vargas, tengo 19 años 
         soy estudiante de ingenieria de sistemas en la universidad Javeriana, me caracterizo por ser
