segundo parrafo "Mis comienzos"

--- a/sofia.html
+++ b/sofia.html
@@ -44,6 +44,9 @@
     </p>
     </div>
     <h2> Mis comienzos</h2>
+    <p>
+        Inicialmente , estudie en el colegio el carmelo de Bogota, un colegio catolico y femenino en aquel entonces, estudie desde primero de primaria hasta once de bachillerato, en mi colegio, obtuve las primeras bases de html para generar paginas web, a partir de esos conocimientos, me di cuenta, de que queria estudiar ingenieria de sistemas. Sin embargo en el colegio, no siempre fui buena estudiante, desde sexto hasta octavo no me iba del todo bien, pues estaba más centrada en otros objetivos, hasta que un dia, en una charla, una universidad comento que muchas universidades tenian en cuenta las notas de 9, 10 y 11, en ese momento, me di cuenta, que realmente necesitaba mejorar mis habitos de estudio, y cuando pase al siguiente año, todo cambio, me volvi más responsable, estudiaba gran parte de mi tiempo, y asi , logre llegar al cuadro de honor por primera vez en mi vida y aunque suene gracioso, fue un merito para mi, desde entonces seguí mejorando mis habitos de estudio, cuando entre a grado decimo, presente las olimpiadas matematicas en mi colegio, donde fui seleccionada para un campeonato, pase la segunda etapa de las pruebas para ir a competir en un colegio, finalmente llego la prueba final, la prueba desiciba, donde de 5 compañeros, logramos pasar unicamente 2 y finalmente participe en las olimpiadas matematicas del colegio del rosario, hasta yo me sorprendí de mis capacidades, en grado once llegue a ser representante de mi grado, donde pude liderar y guiar a mi curso apuntando al objetivo de una excelencia y formación personal, convirtiendome así en una mujer trascendente, hasta finalmente, graduarme.
+    </p>
     <footer>
         <p>Puedes contactarme al: +57 3116566558</p>
       </footer>
