lo puse mas bonito

--- a/sofia.html
+++ b/sofia.html
@@ -1,55 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sofia Cespedes</title>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sofia Cespedes</title>
 </head>
-    <div class = "yo">
-        <img src="js.png.png" alt="java script" width="100" height="100"> 
-    </div>
-   
-        <style>
-             p{
-            text-align:left;
-            max-width: 5000px;
-            
-             }
-        </style>
 
 <body>
-    <header>
-        <nav>
-          <ul>
-            <li><a href="#">Bienvenido</a></li>
-            <li><a href="#">Datos Biograficos</a></li>
-            <li><a href="#">Hoja de vida</a></li>
-            <li><a href="#">Hobbies</a></li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Bienvenido</a></li>
+        <li><a href="#">Datos Biograficos</a></li>
+        <li><a href="#">Hoja de vida</a></li>
+        <li><a href="#">Hobbies</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <h1 class="titulo-principal">"AUTO BIOGRAFIA"</h1>
-
-      <div class="introduccion">
-    <p>
-        Hola querido espectador!,  soy Sofia Cespedes Vargas, tengo 19 años 
-        soy estudiante de ingenieria de sistemas en la universidad Javeriana, me caracterizo por ser
-        una persona autodidacta, amable, con escucha activa y disposición a la hora de trabajar.
-        Estoy interesada en desarrollo de software, bases de datos, desarrollo web y desarrollo 
-        de aplicaciones moviles , actualmente estoy estudiando ingles y a su vez estoy aprendiendo
-        distintos lenguajes de programación y algunos asuntos que considero importantes. Pero bueno, quiero contarte el diferente contenido que podras encontrar en estas paginas web. El objetivo principal es que me conozcas a mi, mi trabajo, mis gustos y sobre todo mis habilidades a nivel profesional, siempre tengo la disposición de trabajar en equipo con personas o empresas que le saquen provecho a las tecnologias o quieran evolucionar. Mediante el menu podras navegar en 5 paginas web, el menu principal (bienvenida), segundo mis datos biograficos, tercero mi hoja vida y por ultimo material de interes (gustos y pasatiempos).espero, ser de tu agrado. por otro lado te invito a seguirme en mi github, donde estare programando y dando a conocer distintas paginas web, por ahora, te dare un breve spoiler de lo que podras encontrar en las proximas paginas que estare desarrollando. Inicialmente habra una pagina web dedicada a pokemon, el famoso juego que casi todos conocemos, esta pagina web tendra como fin elevar tu imaginación y mediante un formulario planear como te gustaria que fuera tu pokemon ideal, otra de las paginas web sera ambiental, donde podras informarte, y conocer diferentes paginas en las cuales podras apoyar distintos asuntos ambientales que nos benefician a todos, luego, podras encontrar una pagina web de tecnologia, que te informara casos famosos de robos y estafas, el mundo del internet puede ser bastante oscuro, asi como distintas formas de protegerte de aquellas amenazas tecnologicas, y por ultimo encontraras una pagina web donde te contare un poco de mi trabajo para optimizar y dar a conocer empresas pequeñas o grandes en el mundo del internet, nadie pensaria que una pagina web podria generar tanto impacto, pero, podras ver la importancia de evolucionar y sacarle provecho a las paginas web.
-    </p>
+  <main>
+    <div class="yo">
+      <img src="js.png.png" alt="java script" width="100" height="100">
     </div>
-    <h2> Mis comienzos</h2>
+    <h1 class="titulo-principal">"AUTO BIOGRAFIA"</h1>
+
+    <div class="introduccion">
+
+      <p>
+        <br>
+        Hola querido espectador!, soy Sofia Cespedes Vargas, tengo 19 años
+        soy estudiante de ingenieria de sistemas en la universidad Javeriana, me caracterizo por ser
+        una persona autodidacta, amable, con escucha activa y disposición a la hora de trabajar.</br>
+        Estoy interesada en desarrollo de software, bases de datos, desarrollo web y desarrollo
+        de aplicaciones moviles , actualmente estoy estudiando ingles y a su vez estoy aprendiendo
+        distintos lenguajes de programación y algunos asuntos que considero importantes. Pero bueno, quiero contarte el
+        diferente contenido que podras encontrar en estas paginas web. El objetivo principal es que me conozcas a mi, mi
+        trabajo, mis gustos y sobre todo mis habilidades a nivel profesional, siempre tengo la disposición de trabajar
+        en equipo con personas o empresas que le saquen provecho a las tecnologias o quieran evolucionar. Mediante el
+        menu podras navegar en 5 paginas web, el menu principal (bienvenida), segundo mis datos biograficos, tercero mi
+        hoja vida y por ultimo material de interes (gustos y pasatiempos).espero, ser de tu agrado. por otro lado te
+        invito a seguirme en mi github, donde estare programando y dando a conocer distintas paginas web, por ahora, te
+        dare un breve spoiler de lo que podras encontrar en las proximas paginas que estare desarrollando. Inicialmente
+        habra una pagina web dedicada a pokemon, el famoso juego que casi todos conocemos, esta pagina web tendra como
+        fin elevar tu imaginación y mediante un formulario planear como te gustaria que fuera tu pokemon ideal, otra de
+        las paginas web sera ambiental, donde podras informarte, y conocer diferentes paginas en las cuales podras
+        apoyar distintos asuntos ambientales que nos benefician a todos, luego, podras encontrar una pagina web de
+        tecnologia, que te informara casos famosos de robos y estafas, el mundo del internet puede ser bastante oscuro,
+        asi como distintas formas de protegerte de aquellas amenazas tecnologicas, y por ultimo encontraras una pagina
+        web donde te contare un poco de mi trabajo para optimizar y dar a conocer empresas pequeñas o grandes en el
+        mundo del internet, nadie pensaria que una pagina web podria generar tanto impacto, pero, podras ver la
+        importancia de evolucionar y sacarle provecho a las paginas web.
+      </p>
+    </div>
+    <h2> OPORTUNIDADES</h2>
     <p>
-        Inicialmente , estudie en el colegio el carmelo de Bogota, un colegio catolico y femenino en aquel entonces, estudie desde primero de primaria hasta once de bachillerato, en mi colegio, obtuve las primeras bases de html para generar paginas web, a partir de esos conocimientos, me di cuenta, de que queria estudiar ingenieria de sistemas. Sin embargo en el colegio, no siempre fui buena estudiante, desde sexto hasta octavo no me iba del todo bien, pues estaba más centrada en otros objetivos, hasta que un dia, en una charla, una universidad comento que muchas universidades tenian en cuenta las notas de 9, 10 y 11, en ese momento, me di cuenta, que realmente necesitaba mejorar mis habitos de estudio, y cuando pase al siguiente año, todo cambio, me volvi más responsable, estudiaba gran parte de mi tiempo, y asi , logre llegar al cuadro de honor por primera vez en mi vida y aunque suene gracioso, fue un merito para mi, desde entonces seguí mejorando mis habitos de estudio, cuando entre a grado decimo, presente las olimpiadas matematicas en mi colegio, donde fui seleccionada para un campeonato, pase la segunda etapa de las pruebas para ir a competir en un colegio, finalmente llego la prueba final, la prueba desiciba, donde de 5 compañeros, logramos pasar unicamente 2 y finalmente participe en las olimpiadas matematicas del colegio del rosario, hasta yo me sorprendí de mis capacidades, en grado once llegue a ser representante de mi grado, donde pude liderar y guiar a mi curso apuntando al objetivo de una excelencia y formación personal, convirtiendome así en una mujer trascendente, hasta finalmente, graduarme.
+      ¿Como alguien como yo, pudo haber llegado hasta donde esta?
+      Crecí en una familia sin las capacidades economicas para ingresar a una universidad tan prestigiosa como la
+      Javeriana,
     </p>
-    <footer>
-        <p>Puedes contactarme al: +57 3116566558</p>
-      </footer>
+    <div class="grado-img">
+      <img src="grado.jpeg" alt="java script" width="200" height="300">
+    </div>
+
+    <div class="escudo-img">
+      <img src="escudo.jpeg" alt="java script" width="200" height="400">
+    </div>
+  </main>
+
+
+  <footer>
+    <p>Puedes contactarme al: +57 3116566558</p>
+  </footer>
 </body>
 
 </html>
