Agregue imagenes texto ,letra del subtitulo grande

--- a/sofia.html
+++ b/sofia.html
@@ -22,18 +22,13 @@
   </header>
 
   <main>
-    <div class="yo">
-      <img src="js.png.png" alt="java script" width="100" height="100">
-    </div>
     <h1 class="titulo-principal">"AUTO BIOGRAFIA"</h1>
 
     <div class="introduccion">
-
-      <p>
-        <br>
+      <p class="texto">
         Hola querido espectador!, soy Sofia Cespedes Vargas, tengo 19 años
         soy estudiante de ingenieria de sistemas en la universidad Javeriana, me caracterizo por ser
-        una persona autodidacta, amable, con escucha activa y disposición a la hora de trabajar.</br>
+        una persona autodidacta, amable, con escucha activa y disposición a la hora de trabajar. <img class="yo" src="js.png.png" alt="java script" width="100" height="100">
         Estoy interesada en desarrollo de software, bases de datos, desarrollo web y desarrollo
         de aplicaciones moviles , actualmente estoy estudiando ingles y a su vez estoy aprendiendo
         distintos lenguajes de programación y algunos asuntos que considero importantes. Pero bueno, quiero contarte el
@@ -55,19 +50,18 @@
         importancia de evolucionar y sacarle provecho a las paginas web.
       </p>
     </div>
-    <h2> OPORTUNIDADES</h2>
+    <h2 class="subtitulo"> OPORTUNIDADES</h2>
     <p>
-      ¿Como alguien como yo, pudo haber llegado hasta donde esta?
-      Crecí en una familia sin las capacidades economicas para ingresar a una universidad tan prestigiosa como la
-      Javeriana,
+    <br>
+      <b>
+        ¿Como alguien como yo, pudo haber llegado hasta donde esta?
+      </b>
+  
+    </br>
+    
+      Crecí en una familia sin las capacidades economicas para ingresar a una universidad tan prestigiosa como la Javeriana , ademas de mis padres quienes estaban planeando vivir en Cali, en ese momento, me sentí, contra la espada y la pared pues mi vida estaba en Bogota, pero ademas, tampoco tenia claro en que universidad iba a estudiar. Cuando recibí la noticia de que nos ibamos a mudar, decidí arriesgarme y apuntarme a una universidad que sabia no podian pagar, la Javeriana de Cali, sin embargo, al ingresar estaban en apertura de becas aqui en Bogota y decidí inscribirme sin tener idea de que pasaria, una vez realizado el proceso y equivocarme muchas veces lo logre, para darme cuenta, que debia hacer <img src="otra foto mia.jpeg" alt="java script" width="200" height="300">la inscripcion para el año siguiente debido a que no me habia graduado del colegio, sin embargo no desistí y en cuanto tuve la oportunidad de nuevo lo intente. En ese momento, estaba decidida a entrar a la Javeriana y despues de mucho esperar por fin obtuve la respuesta, y si en efecto, me aceptaron logré quedarme en Bogota y estudiar en una universidad que jamas habia considerado estudiar y con un logro que mi yo de pequña no se creeria, y es así como comence  una gran aventura. 
     </p>
-    <div class="grado-img">
-      <img src="grado.jpeg" alt="java script" width="200" height="300">
-    </div>
-
-    <div class="escudo-img">
-      <img src="escudo.jpeg" alt="java script" width="200" height="400">
-    </div>
+    <img src="R.jpg" alt="java script">
   </main>
 
 
