--- a/sofia.html
+++ b/sofia.html
@@ -59,14 +59,16 @@
   
     </br>
     
-      Crecí en una familia sin las capacidades economicas para ingresar a una universidad tan prestigiosa como la Javeriana , ademas de mis padres quienes estaban planeando vivir en Cali, en ese momento, me sentí, contra la espada y la pared pues mi vida estaba en Bogota, pero ademas, tampoco tenia claro en que universidad iba a estudiar. Cuando recibí la noticia de que nos ibamos a mudar, decidí arriesgarme y apuntarme a una universidad que sabia no podian pagar, la Javeriana de Cali, sin embargo, al ingresar estaban en apertura de becas aqui en Bogota y decidí inscribirme sin tener idea de que pasaria, una vez realizado el proceso y equivocarme muchas veces lo logre, para darme cuenta, que debia hacer <img src="otra foto mia.jpeg" alt="java script" width="200" height="300">la inscripcion para el año siguiente debido a que no me habia graduado del colegio, sin embargo no desistí y en cuanto tuve la oportunidad de nuevo lo intente. En ese momento, estaba decidida a entrar a la Javeriana y despues de mucho esperar por fin obtuve la respuesta, y si en efecto, me aceptaron logré quedarme en Bogota y estudiar en una universidad que jamas habia considerado estudiar y con un logro que mi yo de pequña no se creeria, y es así como comence  una gran aventura. 
+      Crecí en una familia sin las capacidades economicas para ingresar a una universidad tan prestigiosa como la Javeriana , ademas de mis padres quienes estaban planeando vivir en Cali, en ese momento, me sentí, contra la espada y la pared pues mi vida estaba en Bogota, pero ademas, <img class="fotomia" src="otra foto mia.jpeg" alt="java script" width="200" height="300">tampoco tenia claro en que universidad iba a estudiar. Cuando recibí la noticia de que nos ibamos a mudar, decidí arriesgarme y apuntarme a una universidad que sabia no podian pagar, la Javeriana de Cali, sin embargo,  al ingresar estaban en apertura de becas aqui en Bogota y decidí inscribirme sin tener idea de que pasaria, una vez realizado el proceso y equivocarme muchas veces lo logre, para darme cuenta, que debia hacer la inscripción para el año siguiente debido a que no me habia graduado del colegio, sin embargo no desistí y en cuanto tuve la oportunidad de nuevo lo intente. En ese momento, estaba decidida a entrar a la Javeriana y despues de mucho esperar por fin obtuve la respuesta, y si en efecto, me aceptaron logré quedarme en Bogota y estudiar en una universidad que jamas habia considerado estudiar y con un logro que mi yo de pequña no se creeria, y es así como comence  una gran aventura. 
     </p>
-    <img src="R.jpg" alt="java script">
+    <img src="R.jpg" alt="java script"> <img src="">
+    
+    <h3>Anuncio publicitario que he desarrollado:</h3>
   </main>
 
-
+  
   <footer>
-    <p>Puedes contactarme al: +57 3116566558</p>
+      <p>Puedes contactarme al: +57 3116566558</p>
   </footer>
 </body>
 
