le mejor el tamaño a mi foto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <link rel="stylesheet" href="style.css">
@@ -13,8 +13,8 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Bienvenido</a></li>
-        <li><a href="#">Datos Biograficos</a></li>
+        <li><a href="./index.html">Bienvenid@</a></li>
+        <li><a href="./pagina2.html">Datos Biograficos</a></li>
         <li><a href="#">Hoja de vida</a></li>
         <li><a href="#">Hobbies</a></li>
       </ul>
@@ -59,7 +59,7 @@
   
     </br>
     
-      Crecí en una familia sin las capacidades economicas para ingresar a una universidad tan prestigiosa como la Javeriana , ademas de mis padres quienes estaban planeando vivir en Cali, en ese momento, me sentí, contra la espada y la pared pues mi vida estaba en Bogota, pero ademas, <img class="fotomia" src="otra foto mia.jpeg" alt="java script" width="200" height="300">tampoco tenia claro en que universidad iba a estudiar. Cuando recibí la noticia de que nos ibamos a mudar, decidí arriesgarme y apuntarme a una universidad que sabia no podian pagar, la Javeriana de Cali, sin embargo,  al ingresar estaban en apertura de becas aqui en Bogota y decidí inscribirme sin tener idea de que pasaria, una vez realizado el proceso y equivocarme muchas veces lo logre, para darme cuenta, que debia hacer la inscripción para el año siguiente debido a que no me habia graduado del colegio, sin embargo no desistí y en cuanto tuve la oportunidad de nuevo lo intente. En ese momento, estaba decidida a entrar a la Javeriana y despues de mucho esperar por fin obtuve la respuesta, y si en efecto, me aceptaron logré quedarme en Bogota y estudiar en una universidad que jamas habia considerado estudiar y con un logro que mi yo de pequña no se creeria, y es así como comence  una gran aventura. 
+      Crecí en una familia  sin las capacidades economicas para ingresar <img class="fotomia" src="otra foto mia.jpeg" alt="java script" width="200" height="300">| a una universidad tan prestigiosa como la Javeriana , ademas de mis padres quienes estaban planeando vivir en Cali, en ese momento, me sentí, contra la espada y la pared pues mi vida estaba en Bogota, pero ademas, tampoco tenia claro en que universidad iba a estudiar. Cuando recibí la noticia de que nos ibamos a mudar, decidí arriesgarme y apuntarme a una universidad que sabia no podian pagar, la Javeriana de Cali, sin embargo,  al ingresar estaban en apertura de becas aqui en Bogota y decidí inscribirme sin tener idea de que pasaria, una vez realizado el proceso y equivocarme muchas veces lo logre, para darme cuenta, que debia hacer la inscripción para el año siguiente debido a que no me habia graduado del colegio, sin embargo no desistí y en cuanto tuve la oportunidad de nuevo lo intente. En ese momento, estaba decidida a entrar a la Javeriana y despues de mucho esperar por fin obtuve la respuesta, y si en efecto, me aceptaron logré quedarme en Bogota y estudiar en una universidad que jamas habia considerado estudiar y con un logro que mi yo de pequña no se creeria, y es así como comence  una gran aventura. 
     </p>
     <img class="imagen-escudo-jave" src="R.jpg" alt="java script"> 
     
