agregu imagen de hoja de vida

--- a/pagina2.html
+++ b/pagina2.html
@@ -117,6 +117,10 @@
 
     </main>
     
+    <footer>
+        <p>Puedes contactarme al: +57 3116566558</p>
+    </footer>
+    
 </body>
 
 </html>
