--- a/pagina3.html
+++ b/pagina3.html
@@ -9,18 +9,27 @@
   <title>Hoja de vida</title>
 </head>
 
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Bienvenid@</a></li>
-        <li><a href="./pagina2.html">Datos Biograficos</a></li>
-        <li><a href="#">Hoja de vida</a></li>
-        <li><a href="#">Hobbies</a></li>
-      </ul>
-    </nav>
-  </header>
+    <body>
+        <header>
+        <nav>
+        <ul>
+            <li><a href="./index.html">Bienvenid@</a></li>
+            <li><a href="./pagina2.html">Datos Biograficos</a></li>
+            <li><a href="#">Hoja de vida</a></li>
+            <li><a href="#">Hobbies</a></li>
+        </ul>
+        </nav>
+        </header>
 
-  <main>
-    <h1>MI HOJA DE VIDA </h1>
-  </main>
+        <main>
+            <h1 class="titulo-principal">MI HOJA DE VIDA </h1>
+        </main>
+
+        <img src="Hoja de vida-SCV.jpg" alt="java script" width="300">
+
+        <footer>
+            <p>Puedes contactarme al: +57 3116566558</p>
+        </footer>
+
+    </body>
+</html>
