Lista numerada y no enumerada, más otra imagen

--- a/pagina2.html
+++ b/pagina2.html
@@ -14,7 +14,7 @@
           <ul>
             <li><a href="./index.html">Bienvenido</a></li>
             <li><a href="./pagina2.html">Datos Biograficos</a></li>
-            <li><a href="#">Hoja de vida</a></li>
+            <li><a href="./pagina3.html">Hoja de vida</a></li>
             <li><a href="#">Hobbies</a></li>
           </ul>
         </nav>
@@ -120,7 +120,7 @@
     <footer>
         <p>Puedes contactarme al: +57 3116566558</p>
     </footer>
-    
+
 </body>
 
 </html>
