--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="./index.html">Bienvenid@</a></li>
         <li><a href="./pagina2.html">Datos Biograficos</a></li>
-        <li><a href="#">Hoja de vida</a></li>
+        <li><a href="./pagina3.html">Hoja de vida</a></li>
         <li><a href="#">Hobbies</a></li>
       </ul>
     </nav>
