cree la pagina 4 y mejore la pagina 3

--- a/pagina3.html
+++ b/pagina3.html
@@ -38,10 +38,12 @@
                     <img src="Hoja de vida-SCV.jpg" alt="java script" width="600">
                     </div>
 
-                  <section id="seccion1" class="seccion">
-                    <h2> Experiencia laboral </Label></h2>
+                  <section id="seccion1" class="seccion"> 
+                    <img class="imagen-escudo-jave" src="R.jpg" alt="java script"> 
+
                     <ul class="lista no enumerada">
-                        <li>Anuncios publicitarios en una empresa de tecnoliga como voz en off</li>
+                    <h2> Experiencia laboral </Label></h2>
+                        <li>Anuncios publicitarios en una empresa de tecnoliga como voz en off</li> <img class="imagen-caseta" src="pagina-caseta.PNG" alt="java script" width="500">
                         <li>Marketing digital en distintas aplicaciones web </li>
                         <li> Bases de datos para una empresa ambiental (ACM)</li>
                     </ul>
@@ -56,7 +58,7 @@
                   </section>
                 
                   <section id="seccion3" class="seccion">
-                    <h2>Premios</h2>
+                    <h2>Premios</h2>        
                     <ul class="lista no enumerada">
                         <li>Reconocimiento de olimpiadas matematicas</li> 
                         <li>Certificados de honor por excelencia academica </li>
