--- a/pagina2.html
+++ b/pagina2.html
@@ -15,7 +15,7 @@
             <li><a href="./index.html">Bienvenido</a></li>
             <li><a href="./pagina2.html">Datos Biograficos</a></li>
             <li><a href="./pagina3.html">Hoja de vida</a></li>
-            <li><a href="#">Hobbies</a></li>
+            <li><a href="./pagina4.html">Hobbies</a></li>
           </ul>
         </nav>
       </header>
