acomode texto e imagenes en pagina 3

--- a/pagina3.html
+++ b/pagina3.html
@@ -27,6 +27,9 @@
             <section class="secciones-subsecciones">
                 <h2>INDICE</h2>    
 
+                <div class="hoja-de-vida">
+                    <img src="Hoja de vida-SCV.jpg" alt="java script" width="600">
+                    </div>
                 <ul>
                     <li><a href="#seccion1">Experiencia laboral</a></li> 
                     <li><a href="#seccion2">Estudios</a></li>
@@ -34,16 +37,13 @@
                     <li><a href="#seccion4">Produccion intelectual</a></li>
                   </ul>
 
-                  <div class="hoja-de-vida">
-                    <img src="Hoja de vida-SCV.jpg" alt="java script" width="600">
-                    </div>
 
                   <section id="seccion1" class="seccion"> 
-                    <img class="imagen-escudo-jave" src="R.jpg" alt="java script"> 
+                    <img class="imagen-caseta" src="pagina-caseta.PNG" alt="java script" width="400">
 
+                    <h2>Experiencia laboral</h2>
                     <ul class="lista no enumerada">
-                    <h2> Experiencia laboral </Label></h2>
-                        <li>Anuncios publicitarios en una empresa de tecnoliga como voz en off</li> <img class="imagen-caseta" src="pagina-caseta.PNG" alt="java script" width="500">
+                        <li>Anuncios publicitarios en una empresa de tecnoliga como voz en off</li> 
                         <li>Marketing digital en distintas aplicaciones web </li>
                         <li> Bases de datos para una empresa ambiental (ACM)</li>
                     </ul>
@@ -68,10 +68,10 @@
                   <section id="seccion4" class="seccion">
                     <h2>Produccion intelectual</h2>
                     <ol>
-                        <li>aplicacio web de deporte (Parchados)</li>
+                        <li>Aplicación web de deporte (Parchados)</li>
                         <li>Simuladores de aplicacion movil para una aplicacion ambiental</li>
-                        <li>Marketin digital para aplicacion web de bienes y raices (CASETA)</li>
-                        <li> Realice un curso de Cisco NetAcad</li>
+                        <li>Marketin digital para aplicación web de bienes y raices (CASETA)</li>
+                        <li> Realicé un curso de Cisco NetAcad</li>
                       </ol>
                   </section>
             
