agregue otra imagen y cambie colors pagina 4

--- a/pagina4.html
+++ b/pagina4.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hoja de vida</title>
+  <title>Hobbies</title>
 </head>
 
     <body>
@@ -21,5 +21,25 @@
         </nav>
         </header>
 
+
+        <main>
+            <h1 class="titulo-primero">MATERIAL DE INTERES </h1>
+            <p class="parrafo-principal"> A continuación encontraras algunos de mis pasatiempos o gustos particulares</p>
+
+            <h2 class="titulo-segundo">MUSICA FAVORITA</h2> <img class="imagen-metallica" src="metallica.jpeg" alt="java script" width="400">
+            <ul class="lista-MUSICA">
+                <li>Rock</li> 
+                <li>Metal</li>
+            </ul>
+
+            <h3 class="titulo-tercero">BANDA FACORITTA </h3>
+            <ul>
+                <li class="banda-fav">Iron maiden</li>
+                <img src="" alt="">
+            </ul>
+
+            <iframe width="784" height="441" src="https://www.youtube.com/embed/wXlhsrIzmpo" title="Iron Maiden - Phantom of the Opera [HD]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        </main>
     </body>
 </html>
