agregue otra imagen

--- a/pagina4.html
+++ b/pagina4.html
@@ -35,10 +35,15 @@
             <h3 class="titulo-tercero">BANDA FACORITTA </h3>
             <ul>
                 <li class="banda-fav">Iron maiden</li>
-                <img src="" alt="">
+                <img src="iron-maiden.jpeg" alt="java script" width="200">
             </ul>
 
-            <iframe width="784" height="441" src="https://www.youtube.com/embed/wXlhsrIzmpo" title="Iron Maiden - Phantom of the Opera [HD]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h4 class="titulo-cuarto">ESTETICAS FAVORITAS </h4>
+            <ul>
+                <li class="banda-fav"></li>
+                <img src="iron-maiden.jpeg" alt="java script" width="200">
+            </ul>
+            
 
         </main>
     </body>
