la agregue bien la iamgen ahpra si

--- a/pagina4.html
+++ b/pagina4.html
@@ -41,7 +41,7 @@
             <h4 class="titulo-cuarto">ESTETICAS FAVORITAS </h4>
             <ul>
                 <li class="banda-fav"></li>
-                <img src="iron-maiden.jpeg" alt="java script" width="200">
+                <img src="iron-maide" alt="java script" width="200">
             </ul>
             
 
