--- a/pagina5.html
+++ b/pagina5.html
@@ -43,7 +43,11 @@
 
                 <input type="submit" id="btn" name="btn" value="Enviar"> </input>
             </form>
+
+            <h2>AMIGOS: </h2>
+            
         </main>
+
 
     <script src="pagina5.js"></script>
     </body>
